# cutils

./: CMakeLists.txt  build.sh
src/: unicode.c  unicode.h  ustring.cpp  ustring.h
test/: alloc.cpp
